@@ -43,9 +43,8 @@ EXTRA_DIST = groupings.alist # guile-api.alist
 # pending the papers from Robert Merkel
 # EXTRA_DIST = guile.1
 
-if MAINTAINER_MODE
 include $(top_srcdir)/am/maintainer-dirs
 guile-api.alist: guile-api.alist-FORCE
 	( cd $(top_builddir) ; $(mscripts)/update-guile-api.alist )
 guile-api.alist-FORCE:
-endif
+
